# aegis-rdp

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: config_loader.c  detector.c  event.c  firewall.c  logger.c  main.c  parser.c
src/include/: config.h  config_loader.h  detector.h  event.h  firewall.h  logger.h  parser.h
